styles.css
* {
    box-sizing: border-box;
}

body {
    font-family: "Work Sans", sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100dvh;
    padding: 20px;
    background-color: hsl(275, 100%, 97%);
}

header {
    background-image: url('./assets/images/background-pattern-mobile.svg');
    background-position: center;
}

main {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    width: 320px;

    .heading-container {
        display: flex;
        align-items: center;
        gap: 1rem;

        #star-icon {
            width: 25px;
            height: 25px;
        }
    }

    .topic-container {
        display: grid;
        grid-template-columns: 200px 1fr;
        align-items: center;
        gap: 2rem;

        h2 {
            font-size: 1rem;
        }

        button {
            justify-self: end;
            border-radius: 50%;
            width: 25px;
            height: 25px;
            border: 0;
        }

        button.btn-closed {
            background-image: url('./assets/images/icon-plus.svg');
            background-position: center;
        }
    }

    .closed-section {
        display: none;
    }

    .open-section {
        display: block;
    }

    p {
        color: gray;
    }
}

